--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,24 +1,22 @@
 {
   "name": "api-gateway",
   "version": "1.0.0",
-  "description": "API Gateway for Market Analytics Dashboard",
-  "main": "src/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.5.2",
-    "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.7.5",
-    "dotenv": "^16.4.5",
-    "http-errors": "^2.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  },
-  "author": "Shivam Kumar",
-  "license": "ISC"
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/express": "^1.3.59",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.1"
+  }
 }
