--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.5",
     "@tailwindcss/vite": "^4.0.15",
+    "add": "^2.0.6",
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "chartjs-chart-financial": "^0.2.1",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.483.0",
+    "navigation-menu": "^1.0.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "shadcn": "^2.4.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
