--- a/data-ingestion/.env
+++ b/data-ingestion/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://skj326212:shivam123@cluster0.kjiw1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+ALPHA_VANTAGE_API_KEY = NDBDS2B8L2SGE6X9
 PORT=3001
